<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/MatchParentVertical"
    tools:context="com.ferit.clowntastic.Register">

    <include layout="@layout/toolbar" />

    <LinearLayout style="@style/MatchParentVerticalCenter">

        <TextView
            style="@style/LogoTextStyle"
            android:text="@string/register" />

        <LinearLayout
            style="@style/MatchWidth"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/bigPadding1">

            <LinearLayout style="@style/MatchWidth">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/email" />

                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:inputType="textEmailAddress" />

            </LinearLayout>

            <LinearLayout style="@style/MatchWidth">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/first_name" />

                <EditText
                    android:id="@+id/et_firstName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:inputType="text" />

            </LinearLayout>

            <LinearLayout style="@style/MatchWidth">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/last_name" />

                <EditText
                    android:id="@+id/et_lastName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:inputType="text" />

            </LinearLayout>

            <LinearLayout style="@style/MatchWidth">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/password" />

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:inputType="textPassword" />

            </LinearLayout>

            <LinearLayout style="@style/MatchWidth">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/confirm_password"
                    android:layout_weight="3" />

                <EditText
                    android:id="@+id/et_password_confirm"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:inputType="textPassword" />

            </LinearLayout>

            <LinearLayout style="@style/MatchWidth">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/type"
                    android:layout_weight="3" />

                <Spinner
                    android:id="@+id/sp_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/bt_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up" />

    </LinearLayout>

</LinearLayout>
