<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/MatchParentVertical"
    tools:context="com.ferit.clowntastic.ConfirmOrder">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/confirm_order"
        android:textSize="@dimen/bigTextSize11" />

    <LinearLayout
        style="@style/MatchWidthVertical"
        android:padding="@dimen/mediumPadding1">

        <LinearLayout
            style="@style/MatchWidth"
            android:layout_marginBottom="@dimen/smallPadding2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/customer"
                android:textAllCaps="true" />

            <TextView
                android:id="@+id/tv_customerName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3" />

        </LinearLayout>

        <LinearLayout
            style="@style/MatchWidth"
            android:layout_marginBottom="@dimen/smallPadding2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/order_date"
                android:textAllCaps="true" />

            <TextView
                android:id="@+id/tv_orderDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3" />

        </LinearLayout>

        <LinearLayout
            style="@style/MatchWidth"
            android:layout_marginBottom="@dimen/smallPadding2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/order_address"
                android:textAllCaps="true" />

            <TextView
                android:id="@+id/tv_orderAddress"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3" />

        </LinearLayout>

        <LinearLayout
            style="@style/MatchWidth"
            android:layout_marginBottom="@dimen/smallPadding2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/package_name"
                android:textAllCaps="true" />

            <TextView
                android:id="@+id/tv_package"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3" />

        </LinearLayout>

        <LinearLayout style="@style/MatchWidth">

            <Button
                android:id="@+id/bt_orderAccept"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/blue"
                android:text="@string/accept" />

            <Button
                android:id="@+id/bt_orderRefuse"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/red"
                android:text="@string/refuse" />

        </LinearLayout>

    </LinearLayout>

    <fragment
        android:id="@+id/fMap"
        android:name="com.google.android.gms.maps.MapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
