<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/MatchParentVertical"
    tools:context="com.ferit.clowntastic.Login">

    <include layout="@layout/toolbar" />

    <LinearLayout style="@style/MatchParentVerticalCenter">

        <TextView
            style="@style/LogoTextStyle"
            android:text="@string/login" />

        <TextView
            android:id="@+id/tv_CandC"
            style="@style/CandCStyle"
            tools:text="Clown" />

        <LinearLayout
            style="@style/MatchWidth"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/bigPadding1">

            <LinearLayout style="@style/MatchWidth">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/email" />

                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:inputType="textEmailAddress"
                    android:text="ladida@mail.com" />

            </LinearLayout>

            <LinearLayout style="@style/MatchWidth">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/password" />

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:inputType="textPassword"
                    android:text="test" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            style="@style/MatchWidth"
            android:gravity="center">

            <Button
                android:id="@+id/bt_login"
                style="@style/WrapContent"
                android:text="@string/sign_in" />

            <LinearLayout
                android:id="@+id/ll_progressStatus"
                style="@style/WrapContentVertical"
                android:gravity="center"
                android:visibility="gone">

                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            style="@style/MatchWidth"
            android:layout_marginTop="@dimen/mediumPadding2"
            android:gravity="center">

            <Button
                android:id="@+id/bt_register"
                style="@style/WrapContent"
                android:background="@android:color/transparent"
                android:text="@string/register"
                android:textColor="@color/colorPrimary" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
